--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "translate": "turbo run translate",
     "boundaries": "turbo run boundaries",
     "bump-deps": "bunx npm-check-updates --deep -u -x react-day-picker",
-    "bump-ui": "bunx shadcn@latest add --all --overwrite -c packages/design-system",
-    "add-ui": "bunx --bun shadcn@latest add -c packages/design-system",
+    "bump-ui": "bunx shadcn@latest add --all --overwrite -c packages/ui",
+    "add-ui": "bunx --bun shadcn@latest add -c packages/ui",
     "migrate": "cd packages/database && bunx prisma format && bunx prisma generate && bunx prisma db push",
     "changeset": "changeset",
     "version": "changeset version",
