refactor: Update project structure and dependencies, enhance scripts, and remove unused files

--- a/biome.json
+++ b/biome.json
@@ -11,8 +11,7 @@
       "node_modules/**",
       ".turbo",
       ".next",
-      ".next/**",
-      "packages/ui/components/ui/**"
+      ".next/**"
     ]
   },
   "linter": {
