--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "@next-marketplace/web",
-  "version": "1.0.0",
-  "private": true,
+  "name": "web",
   "scripts": {
-    "build": "NODE_ENV=production next build",
-    "clean": "git clean -xdf .next .turbo node_modules",
-    "dev": "TZ=UTC next dev --turbopack -p 3000",
-    "lint": "biome check .",
-    "format": "biome format --write .",
+    "dev": "next dev -p 3001 --turbopack",
+    "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "analyze": "ANALYZE=true npm run build",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "lint": "biome check .",
+    "format": "biome format --write ."
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@next-marketplace/ui": "workspace:*",
-    "next": "15.3.3",
-    "next-safe-action": "^7.10.8",
+    "@sentry/nextjs": "^9.22.0",
+    "@t3-oss/env-nextjs": "^0.13.4",
+    "date-fns": "^4.1.0",
+    "fumadocs-core": "^15.4.0",
+    "import-in-the-middle": "^1.13.2",
+    "lucide-react": "^0.511.0",
+    "mdx-bundler": "^10.1.1",
+    "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hls-player": "^3.0.7",
-    "react-use-draggable-scroll": "^0.4.7",
-    "resend": "^4.5.1",
-    "server-only": "^0.0.1",
-    "sharp": "0.34.1",
-    "sugar-high": "^0.9.3"
+    "require-in-the-middle": "^7.5.2",
+    "sharp": "^0.34.2",
+    "shiki": "^3.4.2",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@next-marketplace/tsconfig": "workspace:*",
-    "@types/node": "^22.15.29",
-    "@types/react": "19.1.6"
+    "@types/node": "22.15.21",
+    "@types/react": "19.1.5",
+    "@types/react-dom": "19.1.5",
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   }
 }
