--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,15 +2,17 @@
   "name": "@next-marketplace/ui",
   "version": "1.0.0",
   "sideEffects": false,
-  "files": ["tailwind.config.ts", "postcss.config.js", "globals.css"],
   "scripts": {
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
+    "sonner": "^1.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
@@ -18,6 +20,7 @@
     "input-otp": "^1.4.2",
     "jsonfile": "^6.1.0",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "react-day-picker": "8.10.1",
     "react-number-format": "^5.4.4",
@@ -25,12 +28,16 @@
     "tailwind-merge": "2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "tw-animate-css": "^1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
   }
 }
