--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@next-marketplace/*": ["../../packages/*"]
+      "@repo/*": ["../../packages/*"]
     }
   },
   "include": [
