--- a/package.json
+++ b/package.json
@@ -7,19 +7,14 @@
     "clean:workspaces": "turbo clean",
     "dev": "turbo dev --parallel",
     "test": "turbo test --parallel",
-    "start:dashboard": "turbo start --filter=@midday/dashboard",
-    "start:website": "turbo start --filter=@midday/website",
-    "dev:api": "turbo dev --filter=@midday/api",
-    "dev:dashboard": "turbo dev --filter=@midday/dashboard",
-    "build:dashboard": "turbo build --filter=@midday/dashboard",
-    "dev:engine": "turbo dev --filter=@midday/engine",
-    "dev:website": "turbo dev --filter=@midday/website ",
-    "dev:desktop": "turbo dev --filter=@midday/desktop",
-    "jobs:dashboard": "turbo jobs --filter=@midday/jobs",
+    "start:web": "turbo start --filter=/web",
+    "dev:web": "turbo dev --filter=web ",
+    "dev:docs": "turbo dev --filter=docs",
     "format": "biome format --write .",
     "bump-ui": "bunx shadcn@latest add --all --overwrite -c packages/ui",
     "lint": "turbo lint && manypkg check",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "translate": "turbo translate"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
