--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
-    "sonner": "^1.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
@@ -25,11 +25,12 @@
     "react-day-picker": "8.10.1",
     "react-number-format": "^5.4.4",
     "recharts": "^2.15.3",
+    "sonner": "^1.7.1",
     "tailwind-merge": "2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "tw-animate-css": "^1.2.0"
+    "tw-animate-css": "^1.2.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
